--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,14 @@
     <include src="./partials/header.html"></include>
 
     <include src="./partials/shopping_list.html"></include>
-
+<aside>
     <include src="./partials/all_categories.html"></include>
-
     <include src="./partials/support_Ukraine.html"></include>
-
+  </aside>
     <include src="./partials/book-card.html"></include>
 
     <include src="./partials/pop-up.html"></include>
-    
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
