adds some styles

--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,23 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <include src="./partials/header.html"></include>
 
     <include src="./partials/shopping_list.html"></include>
 
-    <include src="./partials/all_categories.html"></include>
+    <aside>
+      <include src="./partials/all_categories.html"></include>
 
-    <include src="./partials/support_Ukraine.html"></include>
+      <include src="./partials/support_Ukraine.html"></include>
+    </aside>
 
     <include src="./partials/book-card.html"></include>
 
     <include src="./partials/pop-up.html"></include>
-    
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
