--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <include src="./partials/header.html"></include>
 
     <include src="./partials/shopping_list.html"></include>
-    <aside>
+    <aside class="aside container">
       <include src="./partials/all_categories.html"></include>
       <include src="./partials/support_Ukraine.html"></include>
     </aside>
