--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,17 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <main>
+      <aside class="aside container">
+        <include src="./partials/all_categories.html"></include>
+        <include src="./partials/support_Ukraine.html"></include>
+      </aside>
 
-    <include src="./partials/shopping_list.html"></include>
+      <include src="./partials/book-card.html"></include>
 
-    <aside class="aside container">
-      <include src="./partials/all_categories.html"></include>
-      <include src="./partials/support_Ukraine.html"></include>
-    </aside>
+      <include src="./partials/pop-up.html"></include>
 
-    <include src="./partials/book-card.html"></include>
-
-    <include src="./partials/pop-up.html"></include>
-
-    <script type="module" src="./index.js"></script>
+      <script type="module" src="./index.js"></script>
+    </main>
   </body>
 </html>
