--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Bookshelf</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,14 +14,15 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main>
-      <aside class="aside container">
+    <main class="container">
+      <div class="flex">
+      <aside class="aside">
         <include src="./partials/all_categories.html"></include>
         <include src="./partials/support_Ukraine.html"></include>
       </aside>
-
+    
       <include src="./partials/book-card.html"></include>
-
+    </div>
       <include src="./partials/pop-up.html"></include>
 
       <script type="module" src="./index.js"></script>
