--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -29,6 +29,10 @@
                 This page is empty, add some books and proceed to order.
               </p>
               <img
+                srcset="
+                  ./images/shoplist/shoplist-book.png    1x,
+                  ./images/shoplist/shoplist-book@2x.png 2x
+                "
                 src="./images/shoplist/shoplist-book.png"
                 alt="bool list"
                 class="shopping-empty-book"
