--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <include src="./partials/header.html"></include>
-  <body>
+  <body class="light">
     <main class="container">
       <div class="flex">
         <aside class="aside">
