--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <include src="./partials/header.html"></include>
   <body>
+    <include src="./partials/header.html"></include>
     <main>
       <div class="shopping-list-section container" id="shopping-list">
         <div class="shopping-section">
@@ -24,6 +24,7 @@
             <h2 class="shopping-title">
               Shopping <span class="list-title">List</span>
             </h2>
+            <div class="book-list"></div>
             <div class="shopping-empty">
               <p class="shopping-text">
                 This page is empty, add some books and proceed to order.
@@ -42,6 +43,7 @@
         </div>
       </div>
     </main>
-    <script type="module" src="./index.js"></script>
+
+    <script type="module" src="./js/shopping_list.js"></script>
   </body>
 </html>
