changed books basket

--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -24,7 +24,7 @@
             <h1 class="hero-heading">
               Shopping <span class="heading-painter">List</span>
             </h1>
-            <div class="book-list"></div>
+            <div class="books-basket"></div>
             <div class="shopping-empty">
               <p class="shopping-text">
                 This page is empty, add some books and proceed to order.
