--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <include src="./partials/header.html"></include>
-  <body>
+  <body class="light">
     <main>
       <div class="shopping-list-section container" id="shopping-list">
         <div class="shopping-section">
