--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,12 @@
       </div>
       <include src="./partials/pop-up.html"></include>
 
+      <button id="anchorBtn" class="anchor-btn">
+        <svg class="anchor-icon" width="24" height="24">
+          <use href="./images/sprite.svg#icon-anchor"></use>
+        </svg>
+      </button>
+
       <script type="module" src="./index.js"></script>
     </main>
   </body>
