update svg conflict

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,7 @@
         <include src="./partials/book-card.html"></include>
       </div>
       <include src="./partials/pop-up.html"></include>
-
-      <button id="anchorBtn" class="anchor-btn">
-        <svg class="anchor-icon" width="24" height="24">
-          <use href="./images/sprite.svg#icon-anchor"></use>
-        </svg>
-      </button>
-
+      <include src="./partials/scroll-up.html"></include>
       <script type="module" src="./index.js"></script>
     </main>
   </body>
