--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -39,6 +39,7 @@
                 class="shopping-empty-book"
               />
             </div>
+            <div id="pagination" class="tui-pagination js-tui-pagination"></div>
           </div>
         </div>
       </div>
