--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <include src="./partials/header.html"></include>
   <body class="light">
+    <include src="./partials/loader.html"></include>
     <main class="container">
       <div class="flex">
         <aside class="aside">
