--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <include src="./partials/header.html"></include>
   <body class="light">
     <include src="./partials/loader.html"></include>
+    <include src="./partials/autorazation.html"></include>
     <main class="container">
       <div class="flex">
         <aside class="aside">
