--- a/src/shopping_list.html
+++ b/src/shopping_list.html
@@ -15,6 +15,7 @@
   </head>
   <body class="light">
     <include src="./partials/header.html"></include>
+    <include src="./partials/autorazation.html"></include>
     <main>
       <div class="shopping-list-section container" id="shopping-list">
         <div class="shopping-section">
@@ -25,7 +26,7 @@
             <h1 class="hero-heading">
               Shopping <span class="heading-painter">List</span>
             </h1>
-            <div class="books-basket"></div>
+            <ul class="books-basket"></ul>
             <div class="shopping-empty">
               <p class="shopping-text">
                 This page is empty, add some books and proceed to order.
@@ -45,6 +46,7 @@
         </div>
       </div>
     </main>
+   
     <script type="module" src="./shopping_list.js"></script>
   </body>
 </html>
